--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@types/react": "^15.0.0",
     "@types/react-dom": "^0.14.20",
     "awesome-typescript-loader": "^3.0.0-beta.18",
+    "jss": "^6.2.0",
+    "jss-preset-default": "^1.3.1",
     "nodemon": "^1.11.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "tslint": "^4.3.1",
     "tslint-react": "^2.3.0",
     "typescript": "^2.1.5",
     "webpack": "2.2.0"
-  },
-  "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
   }
 }
